@startuml classes
set namespaceSeparator none
class "pot.network.storage.BlocksStorage" as pot.network.storage.BlocksStorage {
  PATH : str
  dump(blocks: list[Block])
  load() -> list[Block]
  load_from_bytes(b: bytes) -> list[Block]
  load_from_file(f: BinaryIO) -> list[Block]
  update(blocks: list[Block])
}
class "pot.network.storage.NodeStorage" as pot.network.storage.NodeStorage {
  PATH : str
  dump(nodes: list[Node]) -> None
  load() -> list[Node]
  update(nodes: list[Node]) -> None
}
class "pot.network.storage.Storage" as pot.network.storage.Storage {
  PATH : str
  path : str
  get_size() -> int
  has_files() -> bool
  invalidate_cache() -> None
  is_empty() -> bool
  is_up_to_date()
  unlock() -> None
  update_cache()
  wait_for_set_lock(timeout: int) -> None
}
class "pot.network.storage.TransactionStorage" as pot.network.storage.TransactionStorage {
  PATH : str
  dump(txs: dict[UUID, TxToVerify], lock: bool) -> None
  load() -> dict[UUID, TxToVerify]
  update(txs: dict[UUID, TxToVerify]) -> None
}
class "pot.network.storage.TransactionVerifiedStorage" as pot.network.storage.TransactionVerifiedStorage {
  PATH : str
  dump(txs: dict[UUID, TxVerified], lock: bool) -> None
  load() -> dict[UUID, TxVerified]
  update(txs: dict[UUID, TxVerified]) -> None
}
class "pot.network.storage.ValidatorAgreementInfoStorage" as pot.network.storage.ValidatorAgreementInfoStorage {
  PATH : str
  dump(data: dict) -> None
  load() -> dict
}
class "pot.network.storage.ValidatorAgreementStorage" as pot.network.storage.ValidatorAgreementStorage {
  PATH : str
}
class "pot.network.storage.ValidatorStorage" as pot.network.storage.ValidatorStorage {
  PATH : str
  SEPARATOR : str
  dump(uuids: list[UUID]) -> None
  load() -> list[UUID]
}
pot.network.storage.BlocksStorage --|> pot.network.storage.Storage
pot.network.storage.NodeStorage --|> pot.network.storage.Storage
pot.network.storage.TransactionStorage --|> pot.network.storage.Storage
pot.network.storage.TransactionVerifiedStorage --|> pot.network.storage.Storage
pot.network.storage.ValidatorAgreementInfoStorage --|> pot.network.storage.Storage
pot.network.storage.ValidatorAgreementStorage --|> pot.network.storage.ValidatorStorage
pot.network.storage.ValidatorStorage --|> pot.network.storage.Storage
@enduml